--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13366,7 +13366,7 @@
     <string name="lockscreen_privacy_wallet_summary">Allow access to wallet from lock screen and quick settings</string>
 
     <!-- QR Code Scanner toggle name [CHAR LIMIT=60] -->
-    <string name="lockscreen_privacy_qr_code_scanner_setting_toggle">Show QR Scanner</string>
+    <string name="lockscreen_privacy_qr_code_scanner_setting_toggle">Show QR scanner</string>
     <!-- QR Code Scanner summary [CHAR LIMIT=NONE] -->
     <string name="lockscreen_privacy_qr_code_scanner_summary">Allow access to QR scanner from lock screen</string>
 
