--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13543,6 +13543,9 @@
     <!-- Summary for extra app info settings for a specific app [CHAR LIMIT=40] -->
     <string name="extra_app_info_summary" translatable="false"></string>
 
+    <!-- Label for All Services preference in App info settings [CHAR LIMIT=40] -->
+    <string name="app_info_all_services_label">All Services</string>
+
     <!-- Title for toggle controlling whether notifications are shown when an app pastes from clipboard. [CHAR LIMIT=50] -->
     <string name="show_clip_access_notification">Show clipboard access</string>
 
