Create PrivacyControls page in settings
Current strings are WIP, no entry point. Also updates a few remaining
EXTRA_PERMISSION lines to EXTRA_PERMISSION_GROUP

Test: build
Bug: 194816787
Change-Id: I347b3011e1f51bd11dca92471ba8ba77e2d758e5

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13151,6 +13151,11 @@
     <!-- Summary for the top level Privacy Settings [CHAR LIMIT=NONE]-->
     <string name="privacy_dashboard_summary">Permissions, account activity, personal data</string>
 
+
+    <!-- Title for the privacy controls page [CHAR LIMIT=30]-->
+    <string name="privacy_controls_title">Controls</string>
+
+
     <!-- Label for button in contextual card for users to remove the card [CHAR LIMIT=30] -->
     <string name="contextual_card_dismiss_remove">Remove</string>
     <!-- Label for button in contextual card for users to keep the card [CHAR LIMIT=30] -->
@@ -13690,8 +13695,10 @@
     <string name="camera_toggle_title">Camera access</string>
     <!-- Label for the camera use toggle [CHAR LIMIT=40] -->
     <string name="mic_toggle_title">Microphone access</string>
-    <!-- Describes what is affected by the camera toggle [CHAR LIMIT=NONE] -->
-    <string name="cam_toggle_description">For apps and services</string>
+    <!-- Label for the location use toggle [CHAR LIMIT=40] -->
+    <string name="location_toggle_title">Location access</string>
+    <!-- Describes what is affected by a permission toggle [CHAR LIMIT=NONE] -->
+    <string name="perm_toggle_description">For apps and services</string>
     <!-- Describes what is affected by the mic toggle [CHAR LIMIT=NONE] -->
     <string name="mic_toggle_description">For apps and services. If this setting is off, microphone data may still be shared when you call an emergency number.</string>
 
