--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -317,9 +317,11 @@
     <string name="security_settings_title" msgid="6710768415432791970">"ደህንነት"</string>
     <string name="encryption_and_credential_settings_title" msgid="5856216318961482983">"ምስጠራ እና ምስክርነቶች"</string>
     <string name="encryption_and_credential_settings_summary" product="default" msgid="5298195959570992363">"ስልክ ተመስጥሯል"</string>
-    <string name="decryption_settings_summary" product="default" msgid="1742645256103613503">"ስልክ አልተመሰጠረም"</string>
+    <!-- no translation found for not_encrypted_summary (2251945842585788254) -->
+    <skip />
     <string name="encryption_and_credential_settings_summary" product="tablet" msgid="3776741531205406800">"መሣሪያ ተመሣጥሯል"</string>
-    <string name="decryption_settings_summary" product="tablet" msgid="1864963068216544631">"መሣሪያ አልተመሰጠረም"</string>
+    <!-- no translation found for not_encrypted_summary (2374263654698719382) -->
+    <skip />
     <string name="lockscreen_settings_title" msgid="4086121748092341549">"ማያ ገጽ ቁልፍ"</string>
     <string name="lockscreen_settings_what_to_show_category" msgid="9205490627927741254">"ምን እንደሚታይ"</string>
     <string name="security_settings_summary" msgid="1627059516127354233">"የእኔን ስፍራ፣ማያ ክፈት፣SIM ካርድ ሽንጉር፣ መረጃ ማከማቻ ሽንጉር አዘጋጅ።"</string>
@@ -582,37 +584,14 @@
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ስልክዎን ለመክፈት ወይም በመተግበሪያዎች ውስጥ እርስዎ መሆንዎን ለማረጋገጥ የጣት አሻራዎን መጠቀም አይችሉም።"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"የጣት አሻራዎን ተጠቅመው የስራ መገለጫዎን መክፈት፣ ግዢዎችን ማጽደቅ ወይም ወደ የስራ መተግበሪያዎች መግባት አይችሉም።"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"አዎ፣ አስወግድ"</string>
-    <string name="crypt_keeper_settings_title" msgid="4938812137822100044">"ማመስጠሪያ"</string>
-    <string name="crypt_keeper_encrypt_title" product="tablet" msgid="7484150746479958376">"ጡባዊ አመስጥር"</string>
-    <string name="crypt_keeper_encrypt_title" product="default" msgid="8302873664348463041">"ስልክ አመስጥር"</string>
-    <string name="crypt_keeper_encrypted_summary" msgid="3866488451639592071">"ተመስጥሯል"</string>
-    <string name="crypt_keeper_desc" product="tablet" msgid="4103951371711323192">"የእርስዎን መለያዎች፣ ቅንብሮች፣ የወረዱ መተግበሪያዎች እና ውሂባቸው፣ ማህደረመረጃቸው እና ሌሎች ፋይሎቻቸውን ማመስጠር ይችላሉ። ጡባዊዎን ካመሰጠሩት በኋላ የማያ ገጽ ቁልፍ እንዳዋቀሩ ታሳቢ በማድረግ (ማለትም ስርዓተ-ጥለት፣ ቁጥራዊ ፒን ወይም የይለፍ ቃል) ጡባዊዎን ባበሩት ቁጥር ጡባዊውን ለመፍታት ማያ ገጹን መክፈት ይኖርብዎታል። የሚፈቱበት ሌላኛው ብቻ መንገድ የፋብሪካ ዳግም ማስጀመር ነው፣ ሁሉንም ውሂብዎን በመደምሰስ።\n\nማመስጠር አንድ ሰዓት ወይም ከዚያ በላይ ይወስዳል። በሙሉ ባትሪ መጀመር አለብዎት፣ እና ሂደቱ እስኪያልቅ ድረስ ጡባዊዎ መሰካት አለበት። ካቋረጡት አንዳንድ ወይም ሁሉም ውሂብዎን ያጣሉ።"</string>
-    <string name="crypt_keeper_desc" product="default" msgid="6180866043921135548">"የእርስዎን መለያዎች፣ ቅንብሮች፣ የወረዱ መተግበሪያዎች እና ውሂባቸው፣ ማህደረመረጃቸው እና ሌሎች ፋይሎቻቸውን ማመስጠር ይችላሉ። ስልክዎን ካመሰጠሩት በኋላ የማያ ገጽ ቁልፍ እንዳዋቀሩ ታሳቢ በማድረግ (ማለትም ስርዓተ-ጥለት፣ ቁጥራዊ ፒን ወይም የይለፍ ቃል) ስልክዎን ባበሩት ቁጥር ስልኩን ለመፍታት ማያ ገጹን መክፈት ይኖርብዎታል። የሚፈቱበት ሌላኛው ብቻ መንገድ የፋብሪካ ዳግም ማስጀመር ነው፣ ሁሉንም ውሂብዎን በመደምሰስ።\n\nማመስጠር አንድ ሰዓት ወይም ከዚያ በላይ ይወስዳል። በሙሉ ባትሪ መጀመር አለብዎት፣ እና ሂደቱ እስኪያልቅ ድረስ ስልክዎ መሰካት አለበት። ካቋረጡት አንዳንድ ወይም ሁሉም ውሂብዎን ያጣሉ።"</string>
-    <string name="crypt_keeper_button_text" product="tablet" msgid="5551608011810921471">"ጡባዊ አመስጥር"</string>
-    <string name="crypt_keeper_button_text" product="default" msgid="6370330929679426136">"ስልክ አመስጥር"</string>
-    <string name="crypt_keeper_low_charge_text" msgid="4920087247177024521">"እባክዎ ባትሪዎን ኃይል ይሙላ እና እንደገና ይሞክሩ።"</string>
-    <string name="crypt_keeper_unplugged_text" msgid="2709721134148651329">"እባክዎ የኃይል መሙያዎን ይሰኩ እና እንደገና ይሞክሩ።"</string>
-    <string name="crypt_keeper_dialog_need_password_title" msgid="1847280235529858357">"ምንም የማያቆልፍ ፒን  ወይም ይለፍቃል የለም"</string>
-    <string name="crypt_keeper_dialog_need_password_message" msgid="7210616262954236042">"ምስጠራ ከመጀመርህ በፊት የማያ ቆልፍ ፒን  ወይም ይለፍቃል ማዘጋጀት አለብህ።"</string>
-    <string name="crypt_keeper_confirm_title" msgid="8600000209722452230">"ይመስጠር?"</string>
-    <string name="crypt_keeper_final_desc" product="tablet" msgid="3270587498436152259">"የምስጠራ ክንውኑ የማይመለስ ነው እና ካቋረጡት፤ ውሂብ ያጣሉ።ምስጠራ 1 ሰዓት ወይም ከዛ የበለጠ ይወስዳል፤ በዛ ጊዜ ስልኩ ለብዙ ጊዜያቶች በድጋሚ ይነሳል።"</string>
-    <string name="crypt_keeper_final_desc" product="default" msgid="3040428543349852419">"የምስጠራ ክንውኑ የማይመለስ ነው እና ካቋረጡት፤ ውሂብ ያጣሉ።ምስጠራ 1 ሰዓት ወይም ከዛ የበለጠ ይወስዳል፤ በዛ ጊዜ ስልኩ ለብዙ ጊዜያቶች በድጋሚ ይነሳል።"</string>
-    <string name="crypt_keeper_setup_title" msgid="3339725741305796680">"ማመስጠሪያ"</string>
-    <string name="crypt_keeper_setup_description" product="tablet" msgid="4417016995091289019">"እባክህ ጡባዊህ እስኪመሳጠር ድረስ ጠብቅ።<xliff:g id="PERCENT">^1</xliff:g> ተጠናቋል።"</string>
-    <string name="crypt_keeper_setup_description" product="default" msgid="7902355422499500352">"እባክህ  ስልክህ እስኪመሳጠር ድረስ ጠብቅ። <xliff:g id="PERCENT">^1</xliff:g>% ተጠናቋል።"</string>
-    <string name="crypt_keeper_setup_time_remaining" product="tablet" msgid="8348188415839917821">"ጡባዊዎ እስኪመሰጠር ድረስ ይጠብቁ። ቀሪ ጊዜ፦ <xliff:g id="DURATION">^1</xliff:g>"</string>
-    <string name="crypt_keeper_setup_time_remaining" product="default" msgid="8556105766597855198">"ስልክዎ እስኪመሰጠር ድረስ ይጠብቁ። ቀሪ ጊዜ፦ <xliff:g id="DURATION">^1</xliff:g>"</string>
-    <string name="crypt_keeper_force_power_cycle" product="tablet" msgid="3832496715430327682">"ጡባዊዎን ለማስከፈት ያጥፉትና ከዚያ ያብሩት።"</string>
-    <string name="crypt_keeper_force_power_cycle" product="default" msgid="5070346039522135361">"ስልክዎን ለማስከፈት ያጥፉትና ከዚያ ያብሩት።"</string>
-    <string name="crypt_keeper_warn_wipe" msgid="8104921337301750394">"ማስጠንቀቂያ፦ መሳሪያዎ ከ<xliff:g id="COUNT">^1</xliff:g> ተጨማሪ የመክፈት ሙከራዎች በኋላ ይጠረጋል!"</string>
-    <string name="crypt_keeper_enter_password" msgid="1274917431075529732">"የይለፍቃልህን ተይብ"</string>
-    <string name="crypt_keeper_failed_title" msgid="8173654570682244149">"ምስጠራ ስኬታማ አልነበረም"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="5977961188966570342">"ማመስጠር ተቆራርጧል እና መጨረስ አይችልም። በመሆኑም፣ በጡባዊዎ ላይ ያለውን ውሂብ እስከነጭራሹ መድረስ አይቻልም። \n\n ጡባዊህን በመጠቀም ለመቀጠል፣ የፋብሪካ ዳግም አስጀምር ማከናወን አለብህ። ጡባዊህን ዳግም ካስጀመርክ በኋላ ስታዘጋጅ፣ ወደ Google መለያህ አስጠብቀህ የነበረውን ውሂብ እነበረበት ለመመለስ እድሉን ታገኛለህ።"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="1028716993071131029">"ማመስጠር ተቆራርጧል እና መጨረስ አይችልም። በመሆኑም፣ በስልክዎ ላይ ያለውን ውሂብ እስከነጭራሹ መድረስ አይቻልም። \n\n ስልክዎን በመጠቀም ለመቀጠል፣ የፋብሪካ ዳግም አስጀምር ማከናወን አለብዎት። ስልክዎን ዳግም ካስጀመሩ በኋላ ሲያዘጋጁ፣ ወደ Google መለያዎ አስጠብቀው የነበረውን ውሂብ እነበረበት ለመመለስ እድሉን ያገኛሉ።"</string>
-    <string name="crypt_keeper_data_corrupt_title" msgid="5920153462176846037">"መፍታት አልተሳካም"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="4420666705959562753">"ያስገቡት የይለፍ ቃል ትክክል ነው፣ ይሁንና ውሂብዎ የተበላሸ ነው። \n\nጡባዊዎን መጠቀሙን ለመቀጠል የፋብሪካ ዳግም ማስጀመር ማከናወን ያስፈልግዎታል። ከዳግም ማስጀመሩ በኋላ ጡባዊዎን ሲያዋቅሩት በGoogle መለያዎ ላይ ምትኬ የተቀመጠለት ማንኛውም ውሂብ ወደነበረበት የመመለስ አጋጣሚ ይኖርዎታል።"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="3200498792238652367">"ያስገቡት የይለፍ ቃል ትክክል ነው፣ ይሁንና ውሂብዎ የተበላሸ ነው። \n\nስልክዎን መጠቀሙን ለመቀጠል የፋብሪካ ዳግም ማስጀመር ማከናወን ያስፈልግዎታል። ከዳግም ማስጀመሩ በኋላ ስልክዎን ሲያዋቅሩት በGoogle መለያዎ ላይ ምትኬ የተቀመጠለት ማንኛውም ውሂብ ወደነበረበት የመመለስ አጋጣሚ ይኖርዎታል።"</string>
-    <string name="crypt_keeper_switch_input_method" msgid="7712732134989470573">"የግቤት ስልት ቀይር"</string>
+    <!-- no translation found for encryption_settings_title (2848716008695618360) -->
+    <skip />
+    <!-- no translation found for encrypt_title (6518642273119816435) -->
+    <skip />
+    <!-- no translation found for encrypt_title (7337365190988321100) -->
+    <skip />
+    <!-- no translation found for encrypted_summary (545623487587251207) -->
+    <skip />
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"የስልክዎን ደህንነት ይጠብቁ"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="3213718550422761562">"ጡባዊን ለመጠበቅ የማያ ገጽ ቁልፍን ያቀናብሩ"</string>
     <string name="suggested_lock_settings_summary" product="device" msgid="8479766049078378225">"መሣሪያን ለመጠበቅ የማያ ገጽ ቁልፍን ያቀናብሩ"</string>
@@ -1091,6 +1070,8 @@
     <string name="wifi_use_system_certs" msgid="5587866698144996931">"የሥርዓት የዕውቅና ማረጋገጫዎችን ይጠቀሙ"</string>
     <string name="wifi_do_not_provide_eap_user_cert" msgid="6336636553673065145">"አታቅርብ"</string>
     <string name="wifi_do_not_validate_eap_server" msgid="4673867078988209732">"አታረጋግጥ"</string>
+    <!-- no translation found for wifi_trust_on_first_use (7488431582505858774) -->
+    <skip />
     <string name="wifi_ssid_too_long" msgid="5961719058705013875">"የአውታረ መረብ ስም ከልክ በላይ ረዥም ነው።"</string>
     <string name="wifi_no_domain_warning" msgid="1452133316532366772">"ጎራ መጠቀስ አለበት።"</string>
     <string name="wifi_no_user_cert_warning" msgid="8466376918835248956">"የእውቅና ማረጋገጫ ያስፈልጋል።"</string>
@@ -2316,6 +2297,8 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"በአቋራጭ ያጉሉ"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"በአቋራጭ እና ሦስቴ መታ በማድረግ ያጉሉ"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"ስለ<xliff:g id="SERVICE">%1$s</xliff:g>"</string>
+    <!-- no translation found for accessibility_text_reading_options_title (4684613866595056574) -->
+    <skip />
     <string name="accessibility_screen_option" msgid="8465307075278878145">"አማራጮች"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"በማያ ገጹ ላይ ያጉሉ"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"ለማጉላት 3 ጊዜ መታ ያድርጉ"</string>
@@ -2422,6 +2405,8 @@
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"የበለጠ ጊዜ"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"ጊዜን በራስ-ሰር ጠቅ ያድርጉ"</string>
     <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"ንዝረት እና ረቂቅ ንዝረት"</string>
+    <!-- no translation found for accessibility_vibration_settings_summary (3690308537483465527) -->
+    <skip />
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"ጥሪዎች"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"ማሳወቂያዎች እና ማንቂያዎች"</string>
     <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"በይነተገናኝ ረቂቅ ንዝረት"</string>
@@ -2430,6 +2415,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"የንክኪ ግብረመልስ"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>ን ይጠቀሙ"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>ን ክፈት"</string>
+    <!-- no translation found for accessibility_service_quick_settings_tooltips_content (4033381225041886637) -->
+    <skip />
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"የቀለም ማስተካከያን ተጠቀም"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"የቀለም ማስተካከያ አቋራጭ"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"ስለቀለም ማስተካከያ"</string>
@@ -2501,15 +2488,6 @@
       <item quantity="one"><xliff:g id="CLICK_DELAY_LABEL_2">%1$s</xliff:g> ሰከንዶች</item>
       <item quantity="other"><xliff:g id="CLICK_DELAY_LABEL_2">%1$s</xliff:g> ሰከንዶች</item>
     </plurals>
-    <string name="accessibility_vibration_summary" msgid="27904038683405084">"<xliff:g id="SUMMARY_RING">%1$s</xliff:g> ደውል፣ ማሳወቂያ <xliff:g id="SUMMARY_NOTIFICATION">%2$s</xliff:g>፣  <xliff:g id="SUMMARY_TOUCH">%3$s</xliff:g> ይንኩ"</string>
-    <string name="accessibility_vibration_summary_off" msgid="7776105450117095736">"የጥሪ ድምፅ እና ማሳወቂያ ወደ አጥፋ ተቀናብረዋል"</string>
-    <string name="accessibility_vibration_summary_low" msgid="6482721005400340317">"የጥሪ ድምፅ እና ማሳወቂያ ወደ ዝቅተኛ ተቀናብረዋል"</string>
-    <string name="accessibility_vibration_summary_medium" msgid="2348889320548746469">"የጥሪ ድምፅ እና ማሳወቂያ ወደ መካከለኛ ተቀናብረዋል"</string>
-    <string name="accessibility_vibration_summary_high" msgid="1764693979030913712">"የጥሪ ድምፅ እና ማሳወቂያ ወደ ከፍተኛ ተቀናብረዋል"</string>
-    <string name="accessibility_vibration_intensity_off" msgid="972159695404061944">"አጥፋ"</string>
-    <string name="accessibility_vibration_intensity_low" msgid="6311161118835287335">"ዝቅተኛ"</string>
-    <string name="accessibility_vibration_intensity_medium" msgid="1734058611879392797">"መካከለኛ"</string>
-    <string name="accessibility_vibration_intensity_high" msgid="5982896399775212514">"ከፍተኛ"</string>
     <string name="accessibility_menu_item_settings" msgid="2652637954865389271">"ቅንብሮች"</string>
     <string name="accessibility_feature_state_on" msgid="1777344331063467511">"በርቷል"</string>
     <string name="accessibility_feature_state_off" msgid="169119895905460512">"ጠፍቷል"</string>
@@ -2546,11 +2524,6 @@
     <string name="enable_service_title" msgid="7231533866953706788">"<xliff:g id="SERVICE">%1$s</xliff:g> ሙሉ የመሣሪያዎ ቁጥጥር እንዲኖረው ይፈቀድለት?"</string>
     <string name="capabilities_list_title" msgid="1225853611983394386">"<xliff:g id="SERVICE">%1$s</xliff:g> ይህን ማድረግ አለበት፦"</string>
     <string name="touch_filtered_warning" msgid="4225815157460318241">"አንድ መተግበሪያ የፍቃድ ጥያቄ እያገደ ስለሆነ ቅንብሮች ጥያቄዎን ማረጋገጥ አይችሉም።"</string>
-    <string name="enable_service_encryption_warning" msgid="931082737770453755">"<xliff:g id="SERVICE">%1$s</xliff:g>ን ካበሩት፣ መሳሪያዎ የውሂብ ምስጠራን ለማላቅ የማያ ገጽ መቆለፊያዎን አይጠቀምም።"</string>
-    <string name="secure_lock_encryption_warning" msgid="669152607190123579">"አንድ የተደራሽነት አገልግሎትን ስላበሩ፣ መሳሪያዎ የውሂብ ምስጠራን ለማላቅ የማያ ገጽ መቆለፊያዎን አይጠቀምም።"</string>
-    <string name="enable_service_pattern_reason" msgid="6832846117817938536">"<xliff:g id="SERVICE">%1$s</xliff:g>ን ማብራት የውሂብ ምስጠራ ላይ ተጽዕኖ ስለሚያሳርፍ፣ የእርስዎን ስርዓተ-ጥለት ማረጋገጥ ያስፈልግዎታል።"</string>
-    <string name="enable_service_pin_reason" msgid="6040417014360237703">"<xliff:g id="SERVICE">%1$s</xliff:g>ን ማብራት የውሂብ ምስጠራ ላይ ተጽዕኖ ስለሚያሳርፍ፣ የእርስዎን ፒን ማረጋገጥ ያስፈልግዎታል።"</string>
-    <string name="enable_service_password_reason" msgid="6962544350351734238">"<xliff:g id="SERVICE">%1$s</xliff:g>ን ማብራት የውሂብ ምስጠራ ላይ ተጽዕኖ ስለሚያሳርፍ፣ የእርስዎን የይለፍ ቃል ማረጋገጥ ያስፈልግዎታል።"</string>
     <string name="accessibility_service_warning" msgid="6779187188736432618">"<xliff:g id="SERVICE">%1$s</xliff:g> ሙሉ የዚህ መሣሪያ ቁጥጥር እየጠየቀ ነው። አገልግሎቱ የተደራሽነት ፍላጎቶች ያላቸውን ተጠቃሚዎች ወክሎ ማያ ገጹን ማንበብ እና ለእነሱ መስራት ይችላል። ይህ የቁጥጥር ደረጃ ለአብዛኛዎቹ መተግበሪያዎች አግባብ አይደለም።"</string>
     <string name="accessibility_service_warning_description" msgid="6573203795976134751">"ሙሉ ቁጥጥር ከተደራሽነት ፍላጎቶች ጋር እርስዎን ለሚያግዝዎት መተግበሪያዎች ተገቢ ነው ሆኖም ግን ለአብዛኛዎቹ መተግበሪያዎች አይሆንም።"</string>
     <string name="accessibility_service_screen_control_title" msgid="324795030658109870">"ማያ ገጽን ይመልከቱ እና ይቆጣጠሩ"</string>
@@ -3115,14 +3088,6 @@
     <string name="remove_account_failed" msgid="3709502163548900644">"ይህ ለውጥ በአስተዳዳሪዎ አይፈቀድም"</string>
     <string name="cant_sync_dialog_title" msgid="2613000568881139517">"በእጅ ማመሳሰል አልተቻለም"</string>
     <string name="cant_sync_dialog_message" msgid="7612557105054568581">"አመሳስል ለእዚህ ንጥል በአሁን ጊዜ ቦዝኗል።ምርጫህን ለመለወጥ፣ ለጊዜው የዳራ ውሂብ እና ራስ ሰር ማመሳሰያ አብራ።"</string>
-    <string name="enter_password" msgid="6327051330258595331">"Androidን ለመጀመር የይለፍ ቃልዎን ያስገቡ"</string>
-    <string name="enter_pin" msgid="1029287617551232681">"Androidን ለመጀመር ፒንዎን ያስገቡ"</string>
-    <string name="enter_pattern" msgid="1747316785866742960">"Androidን ለመጀመር ስርዓተ-ጥለትዎን ይሳሉ"</string>
-    <string name="cryptkeeper_wrong_pattern" msgid="340747269176120242">"የተሳሳተ ስርዓተ ጥለት"</string>
-    <string name="cryptkeeper_wrong_password" msgid="7295607881887114486">"የተሳሳተ ይለፍ ቃል"</string>
-    <string name="cryptkeeper_wrong_pin" msgid="2347961593970714201">"የተሳሳተ ፒን"</string>
-    <string name="checking_decryption" msgid="6111642972615688237">"በማረጋገጥ ላይ…"</string>
-    <string name="starting_android" msgid="6694154070215356186">"Androidን በማስጀመር ላይ..."</string>
     <string name="delete" msgid="8330605554706263775">"ሰርዝ"</string>
     <string name="misc_files" msgid="6598066985800749585">"ልዩ ልዩ"</string>
     <string name="misc_files_selected_count" msgid="5597802791672749532">"ከ<xliff:g id="NUMBER">%1$d</xliff:g><xliff:g id="TOTAL">%2$d</xliff:g> ምረጥ"</string>
@@ -3218,8 +3183,6 @@
     <string name="data_usage_metered_yes" msgid="4262598072030135223">"የሚለካ"</string>
     <string name="data_usage_metered_no" msgid="1685828958417926268">"የማይለካ"</string>
     <string name="data_usage_disclaimer" msgid="3271450299386176770">"የአገልግሎት አቅራቢ ውሂብ አቆጣጠር ከየመሣሪያዎ ሊለይ ይችላል።"</string>
-    <string name="cryptkeeper_emergency_call" msgid="8369322820475703306">"የአደጋ ጊዜ ጥሪ"</string>
-    <string name="cryptkeeper_return_to_call" msgid="3857250752781151232">"ወደ ስልክ ጥሪ ተመለስ"</string>
     <string name="vpn_name" msgid="3806456074909253262">"ስም"</string>
     <string name="vpn_type" msgid="5533202873260826663">"አይነት"</string>
     <string name="vpn_server" msgid="2908816134941973935">"የአገልጋይ አድራሻ"</string>
@@ -3623,6 +3586,8 @@
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"ዩኤስቢ ትስስር፣ ብሉቱዝ ትስስር፣ wifi መገናኛ ነጥብ"</string>
     <string name="keywords_touch_vibration" msgid="1125291201902251273">"ሃፕቲክስ፣ ንዘር፣ ማያ ገጽ፣ ትብነት"</string>
     <string name="keywords_ring_vibration" msgid="1736301626537417541">"ሃፕቲክስ፣ ንዘር፣ ስልክ፣ ጥሪ፣ አደገኛነት፣ ደውል"</string>
+    <!-- no translation found for keywords_ramping_ringer_vibration (3678966746742257366) -->
+    <skip />
     <string name="keywords_notification_vibration" msgid="9162262178415439951">"ሃፕቲክስ፣ ንዘር፣ አደገኛነት"</string>
     <string name="keywords_vibration" msgid="670455132028025952">"ረቂቅ ንዝረት፣ ንዘር፣ ንዝረት"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"ባትሪ ቆጣቢ፣ ተለጣፊ፣ ጽና፣ የኃይል ቆጣቢ፣ ባትሪ"</string>
@@ -5462,7 +5427,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"ረጅም"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"የኪስ ቦርሳን አሳይ"</string>
     <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"ከማያ ገጽ ቁልፍ እና ፈጣን ቅንብሮች ሆነው የኪስ ቦርሳ መድረሻን ይፍቀዱ"</string>
-    <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="179730396165816425">"QR መቃኛን አሳይ"</string>
+    <!-- no translation found for lockscreen_privacy_qr_code_scanner_setting_toggle (4284186474146767523) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"ከማያ ገጽ መቆለፊያ ሆነው ለQR መቃኛ መዳረሻ ይፍቀዱ"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"የመሣሪያ መቆጣጠሪያዎችን አሳይ"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="6952176547084269909">"ሲቆለፍ መቆጣጠሪያዎችን ይድረሱ"</string>
@@ -5544,6 +5510,8 @@
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"የተንቀሳቃሽ ስልክ ውሂብ ይጥፋ?"</string>
     <string name="mobile_data_disable_message" msgid="7829414836454769970">"በ<xliff:g id="CARRIER">%s</xliff:g> በኩል የውሂብ ወይም የበይነመረቡ መዳረሻ አይኖረዎትም። በይነመረብ በWi-Fi በኩል ብቻ ነው የሚገኝ የሚሆነው።"</string>
     <string name="mobile_data_disable_message_default_carrier" msgid="4449469407705838612">"የእርስዎ አገልግሎት አቅራቢ"</string>
+    <!-- no translation found for not_allowed_by_ent (1958611623122304411) -->
+    <skip />
     <string name="aware_summary_when_bedtime_on" msgid="2063856008597376344">"የመኝታ ሰዓት ሁነታ ስለበራ የማይገኝ"</string>
     <string name="reset_importance_completed" msgid="3595536767426097205">"የማሳወቂያ አስፈላጊነት ዳግም አስጀምር ተጠናቅቋል።"</string>
     <string name="apps_dashboard_title" msgid="3269953499954393706">"መተግበሪያዎች"</string>
