Ask user to reboot when enabling freeform and desktop mode
The introduction of FreeformTaskListener in WM shell requires a reboot
after enabling freeform support fully. Let's add a dialog explaining the
requirement and ask user to reboot the device.

Enabling desktop mode also requires a reboot to take effect, so this CL
also adds the support to it.

There is also a cancel button to dismiss the dialog without a reboot,
just in case users need to hold off the reboot for any reason.

Bug: 215437867
Test: Pressing OK reboots the device. Pressing Cancel dismisses the
dialog.
Test: atest SettingsRoboTests:FreeformWindowsPreferenceControllerTest
Test: atest SettingsRoboTests:DesktopModePreferenceControllerTest

Change-Id: I553237a29751f73afa9fd4066241a19740872f6f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13810,4 +13810,17 @@
     <string name="dream_preview_button_title">Preview screensaver</string>
     <!-- Button to customize the screensaver [CHAR LIMIT=20] -->
     <string name="customize_button_title">Customize</string>
+
+    <!-- Dialog body text used to explain a reboot is required after enabling freeform support for
+    it to work [CHAR LIMIT=none] -->
+    <string name="reboot_dialog_enable_freeform_support">A reboot is required to enable freeform
+    support.</string>
+    <!-- Dialog body text used to explain a reboot is required after forcing desktop mode on
+    secondary dislays. [CHAR LIMIT=none] -->
+    <string name="reboot_dialog_force_desktop_mode">A reboot is required to force desktop mode on
+    secondary displays.</string>
+    <!-- Text on the dialog button to reboot the device now [CHAR LIMIT=50] -->
+    <string name="reboot_dialog_reboot_now">Reboot now</string>
+    <!-- Text on the dialog button to reboot the device later [CHAR LIMIT=50] -->
+    <string name="reboot_dialog_reboot_later">Reboot later</string>
 </resources>
