Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I8ea0d5d717a9d1126b53b41d5461ce43cbc3e868

--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -1555,8 +1555,8 @@
     <string name="sd_eject_summary" product="default" msgid="5151243312587186226">"Desmuntatu SD txartela, kentzeko prest egon dadin"</string>
     <string name="sd_insert_summary" product="nosdcard" msgid="9164545135649775664">"Sartu muntatu beharreko USB bidezko memoria"</string>
     <string name="sd_insert_summary" product="default" msgid="5949168259622002192">"Sartu muntatu beharreko SD txartela"</string>
-    <string name="sd_mount" product="nosdcard" msgid="8305985249945415150">"Muntatu USB memoria"</string>
-    <string name="sd_mount" product="default" msgid="5279813999455776169">"Muntatu SD txartela"</string>
+    <string name="sd_mount" product="nosdcard" msgid="8305985249945415150">"Instalatu USB memoria"</string>
+    <string name="sd_mount" product="default" msgid="5279813999455776169">"Instalatu SD txartela"</string>
     <string name="sd_mount_summary" product="nosdcard" msgid="2190410240845521205"></string>
     <string name="sd_mount_summary" product="default" msgid="2190410240845521205"></string>
     <string name="sd_format" product="nosdcard" msgid="8657427883364711513">"Ezabatu USB memoria"</string>
@@ -1579,7 +1579,7 @@
     <string name="storage_low_title" msgid="8002650511493419567">"Memoria agortzen ari da"</string>
     <string name="storage_low_summary" msgid="7341022293583384506">"Baliteke sistemaren funtzio batzuk behar bezala ez funtzionatzea, esaterako, sinkronizazioa. Egin tokia memorian elementu batzuk ezabatuta edo desainguratuta; adibidez, aplikazioak edo multimedia-edukia."</string>
     <string name="storage_menu_rename" msgid="8549835371429159336">"Aldatu izena"</string>
-    <string name="storage_menu_mount" msgid="4760531872302820569">"Muntatu"</string>
+    <string name="storage_menu_mount" msgid="4760531872302820569">"Instalatu"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"Atera"</string>
     <string name="storage_menu_format" msgid="5454870642788909443">"Formateatu"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Formateatu eramangarri gisa"</string>
@@ -1606,13 +1606,13 @@
     <string name="storage_size_large" msgid="1155308277890194878">"<xliff:g id="NUMBER">^1</xliff:g>"<small><small>" <xliff:g id="UNIT">^2</xliff:g>"</small></small>""</string>
     <string name="storage_volume_used" msgid="5031288167242496837">"Memoria osotik (<xliff:g id="TOTAL">%1$s</xliff:g>} erabilitakoa"</string>
     <string name="storage_mount_success" msgid="393972242641313135">"Muntatu da <xliff:g id="NAME">%1$s</xliff:g>"</string>
-    <string name="storage_mount_failure" msgid="3667915814876418011">"Ezin izan da muntatu <xliff:g id="NAME">%1$s</xliff:g>"</string>
+    <string name="storage_mount_failure" msgid="3667915814876418011">"Ezin izan da instalatu <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="storage_unmount_success" msgid="6406298575402936148">"Atera da segurtasunez <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="storage_unmount_failure" msgid="3796912279003790607">"Ezin izan da atera segurtasunez <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="storage_format_success" msgid="3028114521294256851">"Formateatu da <xliff:g id="NAME">%1$s</xliff:g> memoria-unitatea"</string>
     <string name="storage_format_failure" msgid="2042691589726261987">"Ezin izan da formateatu <xliff:g id="NAME">%1$s</xliff:g> memoria-unitatea"</string>
     <string name="storage_rename_title" msgid="5911285992205282312">"Aldatu memoriaren izena"</string>
-    <string name="storage_dialog_unmounted" msgid="1187960789775910051">"Segurtasunez kanporatu da <xliff:g id="NAME_0">^1</xliff:g>, baina oraindik erabilgarri dago.\n\n<xliff:g id="NAME_1">^1</xliff:g> erabiltzeko, lehenik eta behin, muntatu egin behar duzu."</string>
+    <string name="storage_dialog_unmounted" msgid="1187960789775910051">"Segurtasunez kanporatu da <xliff:g id="NAME_0">^1</xliff:g>, baina oraindik erabilgarri dago.\n\n<xliff:g id="NAME_1">^1</xliff:g> erabiltzeko, lehenik eta behin, instalatu egin behar duzu."</string>
     <string name="storage_dialog_unmountable" msgid="1761107904296941687">"<xliff:g id="NAME_0">^1</xliff:g> hondatuta dago. \n\n<xliff:g id="NAME_1">^1</xliff:g> erabiltzeko, lehenik eta behin, konfiguratu egin behar duzu."</string>
     <string name="storage_internal_format_details" msgid="8922023528848861812">"Formateatu ondoren, beste gailu batzuetan erabili ahal izango duzu <xliff:g id="NAME_0">^1</xliff:g>. \n\n<xliff:g id="NAME_1">^1</xliff:g> memoriako datu guztiak ezabatu egingo dira; beraz, aurretik babeskopia bat egitea gomendatzen dizugu. \n\n"<b>"Egin argazkien eta bestelako multimedia-fitxategien babeskopia"</b>\n"Eraman multimedia-fitxategiak gailu honetako beste memoria batzuetara, edo transferitu ordenagailu batera USB kable baten bidez. \n\n"<b>"Egin aplikazioen babeskopia"</b>\n"<xliff:g id="NAME_6">^1</xliff:g> memorian gordeta dauden aplikazio guztiak desinstalatu egingo dira eta horien datuak ezabatu egingo dira. Aplikazioak gordetzeko, eraman gailu honetako beste memoria batera."</string>
     <string name="storage_internal_unmount_details" msgid="487689543322907311"><b>"<xliff:g id="NAME_0">^1</xliff:g> memoria ateratzen duzunean, han gordetako aplikazioek funtzionatzeari utziko diote eta gordetako multimedia-fitxategiak ez dira erabilgarri egongo memoria berriro sartzen duzun arte."</b>\n\n"<xliff:g id="NAME_1">^1</xliff:g> memoria gailu honetan soilik funtzionatzeko formateatuta dago, eta ez du beste inon funtzionatuko."</string>
