--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -295,7 +295,7 @@
     <string name="show_owner_info_on_lockscreen_label" msgid="197365342192696406">"إظهار معلومات المالك في شاشة القفل"</string>
     <string name="owner_info_settings_title" msgid="3555626140700093017">"إضافة نص على شاشة القفل"</string>
     <string name="security_enable_widgets_title" msgid="676199714313423099">"تفعيل الأدوات"</string>
-    <string name="security_enable_widgets_disabled_summary" msgid="5191637768484254146">"تم إيقاف الإعداد بواسطة المشرف"</string>
+    <string name="security_enable_widgets_disabled_summary" msgid="5191637768484254146">"أوقف المشرف هذا الإعداد"</string>
     <string name="trust_lost_locks_screen_title" msgid="4231232144565291276">"قفل الشاشة عند فقدان الثقة"</string>
     <string name="trust_lost_locks_screen_summary" msgid="718374221849537361">"في حال تفعيل الميزة، سيتم قفل الجهاز عندما يفقد الوكيل المعتمد الأخير الثقة."</string>
     <string name="owner_info_settings_summary" msgid="347238313388083297">"بدون"</string>
