--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -320,7 +320,7 @@
     <string name="security_passwords_title" msgid="4154420930973818581">"Yksityisyys"</string>
     <string name="disabled_by_administrator_summary" msgid="5424846182313851124">"Ei käytettävissä"</string>
     <string name="security_status_title" msgid="6958004275337618656">"Suojaustila"</string>
-    <string name="security_dashboard_summary" msgid="7571035662779425918">"Näytön lukitus, Paikanna puhelin, sovellusten tietoturva"</string>
+    <string name="security_dashboard_summary" msgid="7571035662779425918">"Näytön lukitus, Paikanna laite, sovellusten tietoturva"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Kasvot lisätty"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Ota kasvot käyttöön napauttamalla"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Kasvojentunnistusavaus"</string>
